fix: add scrollbar-gutter: stable CSS property

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -38,6 +38,7 @@
     overscroll-behavior-y: contain;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
+    scrollbar-gutter: stable;
   }
 
   body {
